# agentcrew-mcn

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GROWTH.md  Makefile  README.md  README_CN.md  ROADMAP.md  ROADMAP_EN.md  ROADMAP_ZH.md  SECURITY.md  agentcrew_topics.txt  config.example.yaml  config.yaml  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml
agents/: __init__.py  analyst.py  base.py  publisher.py  reviewer.py  skills.py  tools.py  writer.py
cli/: __init__.py  analyst.py  doctor.py  i18n.py  i18n_messages.py  init.py  main.py  publish.py  rag_cmd.py  schedule.py  write.py
cli/templates/: config.example.yaml
configs/prompts/: writer_system.txt
crew_mcp/: __init__.py  adapter.py  cli.py  client.py  config.py  server.py
dashboard/: __init__.py  app.py  components.py  data_loader.py  i18n.py
dashboard/pages/: analytics.py  publishing.py  system.py
data/: post_history.json
demo/: README.md  agentcrew-demo.sh  agentcrew-demo.txt  record-demo.sh
docs/: cli-reference.md  dashboard.md  faq.md  index.md  installation.md  publishing.md  review.md  scheduling.md  writing.md
docs/en/: index.md
docs/zh/: cli-reference.md  dashboard.md  faq.md  index.md  installation.md  publishing.md  review.md  scheduling.md  writing.md
llm/: __init__.py  client.py
orchestrator/: __init__.py  manager.py  scheduler.py  task_store.py
rag/: __init__.py  embedder.py  knowledge_base.py  retriever.py
scripts/: capture_dashboard.py
tests/: __init__.py  conftest.py
tests/test_agents/: test_analyst.py  test_base.py  test_cross_platform.py  test_image_generation.py  test_publisher.py  test_retry.py  test_reviewer.py  test_skills.py  test_smart_schedule.py  test_tools.py  test_writer.py
tests/test_integration/: test_pipeline.py
tests/test_llm/: test_async.py  test_client.py
tests/test_mcp/: conftest.py  test_adapter.py  test_client.py  test_config.py  test_server.py
tests/test_orchestrator/: test_manager.py  test_scheduler.py
tests/test_platforms/: test_adapter.py  test_csdn.py  test_wechat.py  test_xiaohongshu.py
tests/test_rag/: test_rag.py
tests/test_utils/: test_logging.py
utils/: __init__.py  logging.py
