[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentcrew-mcn"
version = "0.2.1"
description = "AI MCN 自动推广工具 — 多Agent内容营销自动化，支持掘金/知乎/Dev.to"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "super-rick"},
]
keywords = [
    "ai",
    "agent",
    "multi-agent",
    "content-marketing",
    "marketing-automation",
    "automation",
    "mcn",
    "deepseek",
    "openai",
    "llm",
    "rag",
    "chromadb",
    "mcp",
    "cli",
    "python",
    "cross-platform",
    "juejin",
    "zhihu",
    "devto",
    "streamlit",
    "playwright",
    "scheduler",
    "crewai",
    "langchain",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "chromadb>=0.5.0",
    "schedule>=1.2.0",
    "duckduckgo-search>=6.0.0",
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "markdown>=3.5.0",
    "pygments>=2.17.0",
    "mcp>=1.0.0",
]

[project.scripts]
agentcrew-mcn = "cli.main:main"
agent-crew = "cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/super-rick/agentcrew-mcn"
"Bug Reports" = "https://github.com/super-rick/agentcrew-mcn/issues"
"Source" = "https://github.com/super-rick/agentcrew-mcn"

[tool.setuptools.packages.find]
include = ["agents*", "cli*", "llm*", "mcp*", "orchestrator*", "platforms*", "rag*", "dashboard*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json", "*.md"]
"cli.templates" = ["*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "asyncio: mark a test as an asyncio async test",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.black]
target-version = ["py310"]
line-length = 100

[tool.coverage.run]
source = ["agents", "platforms", "orchestrator", "rag", "llm", "cli", "crew_mcp"]
omit = ["tests/*", "dashboard/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
